--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
     <header class="page-header" role="banner">
       <h1>Dell EMC Presales Program</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <a href="http://Matthieu98.github.io/Launchtest" class="btn">Home</a>
-      <a href="http://Matthieu98.github.io/Launchtest/about" class="btn">About</a>
+      <a href="https://launchpresales.github.io/Website" class="btn">Home</a>
+      <a href="https://launchpresales.github.io/Website/about" class="btn">About</a>
     </header>
 
     <main id="content" class="main-content" role="main">
